# opengl-3d-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json
include/glad/: gl.h  glad.h
src/: glad.c  main.cpp
src/core/: camera.h
src/graphics/: mesh.h  model.h  shader.h
src/phase/: 1.cpp  2.cpp  3.cpp  4.cpp  final.cpp
src/shaders/: fragment.glsl  lighting_fragment.glsl  object_fragment.glsl  vertex.glsl
